AWS/viwell-dev-env/eks_plugins/elasticsearch.yaml
kind: Service
apiVersion: v1
metadata:
  name: elasticsearch
  namespace: mon
  labels:
    app: elasticsearch
spec:
  type: NodePort
  selector:
    app: elasticsearch
  ports:
    - name: rest
      port: 9200
      # nodePort: 30111
    - name: inter-node
      port: 9300
      name: inter-node
      # nodePort: 300112
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: es-cluster
  namespace: mon
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
        resources:
            limits:
              cpu: 1000m
            requests:
              cpu: 100m
        ports:
        - containerPort: 9200
          name: rest
          protocol: TCP
        - containerPort: 9300
          name: inter-node
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /usr/share/elasticsearch/data
  volumeClaimTemplates:
  - metadata:
      name: data
      labels:
        app: elasticsearch
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: gp2
      resources:
        requests:
          storage: 50Gi
