AWS/viwell-dev-env/eks_plugins/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: mon
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "false"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: mon-dev.viwell.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
            service:
                name: mon-grafana
                port:
                  number: 80
